fix: lineclamp on title on mobile

--- a/src/app/vote/VotingPage.module.css
+++ b/src/app/vote/VotingPage.module.css
@@ -338,8 +338,8 @@
   .voting-page__film-title {
     white-space: normal;
     display: -webkit-box;
-    line-clamp: 2;
-    -webkit-line-clamp: 2;
+    line-clamp: 3;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
